Fixed spacing between elements

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ a:focus h1 {
 #illustration {
     border-radius: 0.625rem; 
     max-width: 100%;
+    margin-bottom: 1.5rem;
 }
 
 section > h1, section > p{
@@ -52,7 +53,6 @@ h1 {
     font-size: clamp(1.25rem, 3vw, 1.5rem);
     font-weight: 800;
     color: hsl(0, 0%, 7%);
-    margin-top: 0.75rem;
 }
 
 p {
@@ -70,6 +70,7 @@ p {
     padding: 0.25rem 0.75rem;
     border-radius: 0.25rem;
     width: fit-content;
+    margin-top: 0;
 }
 
 #description {
@@ -81,6 +82,7 @@ p {
     display: flex;
     height: 2rem;
     align-items: center;
+    margin-top: 1.5rem;
 }
 
 #avatar {
